--- a/_config.yml
+++ b/_config.yml
@@ -5,19 +5,19 @@ paginate: 6
 paginate_path: page/:num
 
 blog:
-    name: jucheng                                               # 博客名称
+    name: chenjupeng                                               # 博客名称
     description: 再好的东西也有失去的一天,再深的记忆也有淡忘的一天                                        # 博客描述
-    title: jucheng                                              # 网页标题
-    url: http://jucheng.github.io                                                # 博客地址
-    duoshuo:     jucheng                                        # 多说ID
-    tongji:    921c5738feea196e168fcb377c0ee843                                          # 百度统计ID
+    title: chenjupeng                                               # 网页标题
+    url: http://chenjupeng .github.io                                                # 博客地址
+    duoshuo:                                            # 多说ID
+    tongji:                                             # 百度统计ID
     qiniu:                                               # 七牛云地址
 author:
-    name: jucheng                                               # 作者名称
-    email: 847278378@qq.com                                              # 邮箱地址
-    weibo: http://weibo.com/3100253227                                              # 微博地址
-    github: https://github.com/jucheng                                             # GitHub地址
-    logo: http://jucheng.github.io/res/img/logo.jpeg                                               # logo地址
+    name: chenjupeng                                                # 作者名称
+    email: 13570234216@163.com                                             # 邮箱地址
+    weibo: http://weibo.com/u/3073257363                                              # 微博地址
+    github: https://github.com/chenjupeng                                              # GitHub地址
+    logo: http://chenjupeng.github.io/res/img/logo.jpeg                                               # logo地址
     douban:
         name:                                            # 豆瓣地址名称
         key:                                             # 豆瓣API Key
